--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.29",
     "@material-ui/styles": "^4.5.0",
+    "axios": "^0.19.0",
     "gh-pages": "^2.1.1",
     "numeral": "^2.0.6",
     "query-string": "^6.8.3",
