--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
     "@material-ui/lab": "^4.0.0-alpha.29",
     "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
+    "formik": "^1.5.8",
+    "formik-material-ui": "^0.0.22",
     "gh-pages": "^2.1.1",
     "numeral": "^2.0.6",
     "query-string": "^6.8.3",
@@ -17,7 +19,8 @@
     "react-scripts": "3.2.0",
     "react-swipeable-views": "^0.13.3",
     "react-swipeable-views-utils": "^0.13.3",
-    "recharts": "^1.8.3"
+    "recharts": "^1.8.3",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "PORT=8080 react-scripts start",
