--- a/app/package.json
+++ b/app/package.json
@@ -7,29 +7,63 @@
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.29",
     "@material-ui/styles": "^4.5.0",
+    "ag-grid-community": "^21.2.2",
+    "ag-grid-react": "^21.2.2",
     "axios": "^0.19.0",
     "formik": "^1.5.8",
     "formik-material-ui": "^0.0.22",
     "gh-pages": "^2.1.1",
+    "i18next": "^17.3.0",
+    "i18next-browser-languagedetector": "^4.0.0",
+    "i18next-xhr-backend": "^3.2.0",
+    "lodash": "^4.17.15",
+    "material-table": "^1.53.0",
     "numeral": "^2.0.6",
     "query-string": "^6.8.3",
+    "ramda": "^0.26.1",
     "react": "^16.10.2",
+    "react-color": "^2.17.3",
+    "react-data-grid": "^6.1.0",
+    "react-data-grid-addons": "^6.1.0",
     "react-dom": "^16.10.2",
+    "react-i18next": "^10.13.1",
+    "react-joyride": "^2.1.1",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-swipeable-views": "^0.13.3",
     "react-swipeable-views-utils": "^0.13.3",
     "recharts": "^1.8.3",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1",
+    "redux-starter-kit": "^1.0.0",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.3",
     "yup": "^0.27.0"
   },
   "scripts": {
-    "start": "PORT=8080 react-scripts start",
+    "start": "set PORT=8080 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook -p 9009 -s public",
+    "build-storybook": "build-storybook -s public",
+    "lint": "./node_modules/.bin/standard",
+    "lint-fix": "./node_modules/.bin/standard --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "standard": {
+    "ignore": [
+      "build/*"
+    ],
+    "parser": "babel-eslint",
+    "env": [
+      "jest",
+      "es6",
+      "browser"
+    ]
   },
   "browserslist": {
     "production": [
@@ -42,5 +76,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-actions": "^5.2.4",
+    "@storybook/addon-links": "^5.2.4",
+    "@storybook/addons": "^5.2.4",
+    "@storybook/react": "^5.2.4",
+    "babel-eslint": "^10.0.3",
+    "redux-devtools": "^3.5.0",
+    "redux-devtools-extension": "^2.13.8",
+    "standard": "^14.3.1"
   }
 }
